login index and step 1(in progress)

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Write your code here -->
+    hello
   </body>
 </html>
