--- a/src/Login/create-account-step-1.html
+++ b/src/Login/create-account-step-1.html
@@ -31,7 +31,7 @@
                 class="relative flex py-4 px-3 items-center justify-between gap-2.5 rounded border border-neutral-500 self-stretch">
                 <label for="inputText"
                     class="text-neutral-500 absolute bg-neutral-1000 px-1 left-[1.21rem] -top-3">Email</label>
-                <input type="text" placeholder="Email" name="inputText" 
+                <input type="text" placeholder="Email" name="inputText"
                     class="bg-black text-neutral-50 placeholder:text-neutral-500 focus:outline-none w-full font-inter text-lg font-normal">
                 <!-- <img src="../public/icons/valid.svg" class="w-6 h-6" alt="valid"> -->
 
@@ -39,9 +39,18 @@
 
             <div class="flex flex-col gap-2">
                 <h2 class="text-md font-bold text-neutral-50">Date of birth</h2>
-                <h3 class="text-[0.874rem] font-normal text-neutral-500">This will not be shown publicly. Confirm your own age, even if this account is for a business, a pet, or something else.</h3>
+                <h3 class="text-[0.874rem] font-normal text-neutral-500">This will not be shown publicly. Confirm your
+                    own age, even if this account is for a business, a pet, or something else.</h3>
             </div>
 
+
+        </div>
+        
+        <div class="flex flex-col px-5 pt-20 justify-end items-center gap-2.5 flex-[1_1_0] self-stretch">
+            <button class="py-3 px-6 bg-neutral-50 flex justify-center items-center self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5
+                hover:bg-neutral-200 disabled:bg-neutral-500">
+                <span class="font-inter text-base font-bold text-neutral-1000"> create account </span>
+            </button>
         </div>
     </main>
 </body>
