--- a/src/Login/create-account-step-2.html
+++ b/src/Login/create-account-step-2.html
@@ -49,10 +49,12 @@
 
         </div>
         <div class="flex flex-col self-stretch items-center justify-end flex-[1_1_0]">
-            <button
-                class="py-2 px-5 flex justify-center items-center shadow-button rounded-create gap-2.5 bg-twitter—blue border border-stroke self-stretch">
-                <span class="font-inter text-base font-bold text-neutral-50"> Sign up </span>
-            </button>
+            <a href="./create-account-step-3.html" class="flex self-stretch">
+                <button
+                    class="py-2 px-5 flex justify-center grow items-center shadow-button rounded-create gap-2.5 bg-twitter—blue border border-stroke self-stretch">
+                    <span class="font-inter text-base font-bold text-neutral-50"> Sign up </span>
+                </button>
+            </a>
         </div>
     </main>
 </body>
