--- a/src/Login/create-account-step-3.html
+++ b/src/Login/create-account-step-3.html
@@ -37,10 +37,12 @@
 
         </div>
         <div class="flex flex-col pt-20 justify-end items-center gap-2.5 flex-[1_1_0] self-stretch">
-            <button class="py-3 px-6 bg-neutral-50 flex justify-center items-center self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5
+            <a href="./create-account-step-4.html" class="flex self-stretch">
+                <button class="py-3 px-6 bg-neutral-50 flex justify-center items-center grow self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5
                 hover:bg-neutral-200 disabled:bg-neutral-500">
-                <span class="font-inter text-base font-bold text-neutral-1000"> Next </span>
-            </button>
+                    <span class="font-inter text-base font-bold text-neutral-1000"> Next </span>
+                </button>
+            </a>
         </div>
     </main>
 </body>
