--- a/src/Login/index.html
+++ b/src/Login/index.html
@@ -17,16 +17,18 @@
         <div class="px-7 flex flex-col">
             <h3 class="font-inter text-[1.9375rem] font-extrabold text-neutral-50 mb-3">Happening now</h3>
             <h4 class="font-inter text-base font-medium text-neutral-50">Join today.</h4>
-            <button class="mt-10 py-2 px-6 bg-neutral-50 flex justify-center items-center self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5
-            hover:bg-neutral-200 disabled:bg-neutral-500">
-                <span class="font-inter text-base font-bold text-neutral-1000"> create account </span>
-            </button>
+            <a href="./create-account-step-1.html" class="flex self-stretch mt-10">
+                <button class="py-2 px-6 flex-grow bg-neutral-50 flex justify-center items-center self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5
+                    hover:bg-neutral-200 disabled:bg-neutral-500">
+                    <span class="font-inter text-base font-bold text-neutral-1000"> create account </span>
+                </button>
+            </a>
             <div class="flex items-center justify-center gap-1 mt-10 mb-10 text-neutral-700">
                 <hr class="bg-neutral-700 text-neutral-700 h-[0.0625rem] block w-full border-0 self-center">
                 <p class="font-normal text-base text-center text-neutral-50 block self-center">or</p>
                 <hr class="bg-neutral-700 text-neutral-700 h-[0.0625rem] block w-full border-0 self-center">
 
-            </div> 
+            </div>
             <p class="font-inter font-medium text-xl text-neutral-50 mb-5">Already have an account?</p>
             <button
                 class="py-2 px-5 flex justify-center items-center self-stretch shadow-button backdrop-blur-button rounded-create gap-2.5 border border-stroke">
