copied to clipboard toast

--- a/src/home-feed/index.html
+++ b/src/home-feed/index.html
@@ -85,12 +85,12 @@
                 </div>
 
                 <div class="text-neutral-50 font-inter text-base font-normal self-stretch">
-                    i've seen people absolutely despise auto layout in figma but i think it's a lifesaver-<br/>
-                    1. tidies everything nice and compact <br/>
-                    2. makes responsive design effortless <br/>
-                    3. no manual adjustments post any tweaks <br/>
-                    4. saves a tonnn of time <br/><br/>
-                    sorry, but will stay an auto layout maxi all life. <br/>
+                    i've seen people absolutely despise auto layout in figma but i think it's a lifesaver-<br />
+                    1. tidies everything nice and compact <br />
+                    2. makes responsive design effortless <br />
+                    3. no manual adjustments post any tweaks <br />
+                    4. saves a tonnn of time <br /><br />
+                    sorry, but will stay an auto layout maxi all life. <br />
 
                 </div>
 
@@ -169,12 +169,21 @@
         </div>
     </div>
 
-    
-    <div class="fixed flex items-center justify-center bottom-[4.5rem] right-[1.31rem] bg-twitter—blue rounded-[2rem] w-16 h-16">
-       <img src="../../public/images/add.svg" class="w-8 h-8">
+
+    <div
+        class="fixed flex items-center justify-center bottom-[4.5rem] right-[1.31rem] bg-twitter—blue rounded-[2rem] w-16 h-16">
+        <img src="../../public/images/add.svg" class="w-8 h-8">
     </div>
 
-    <footer class="flex fixed bottom-0 border-t border-b-neutral-1000 bg-neutral-1000 w-screen py-[1.125rem] px-6 justify-center items-center gap-10">
+    <div class="fixed flex items-center justify-center bottom-20 w-screen">
+        <div class="flex py-3 px-8 items-center justify-center gap-[0.625rem] bg-searchbar-fill rounded-[6.25rem]">
+            Copied to clipboard.
+        </div>
+    </div>
+
+
+    <footer
+        class="flex fixed bottom-0 border-t border-b-neutral-1000 bg-neutral-1000 w-screen py-[1.125rem] px-6 justify-center items-center gap-10">
         <img src="../../public/images/home-active.svg" class="w-6 h-6">
         <img src="../../public/images/profile-inactive.svg" class="w-6 h-6">
     </footer>
